menu onclick not hover + avoid overflow

--- a/frontend/src/scss/layout.scss
+++ b/frontend/src/scss/layout.scss
@@ -57,12 +57,10 @@ html {
 
               .dropdown {
                 .dropdown-menu {
-                  margin-top: 0;
+                  margin: 0;
                 }
-                &:hover {
-                  .dropdown-menu {
-                    display: block;
-                  }
+                .dropdown-menu.opened {
+                  display: block;
                 }
               }
             }
